--- a/nginx.conf
+++ b/nginx.conf
@@ -60,16 +60,40 @@ http {
             proxy_pass http://tornado;
         }
 
+        location / {
+            autoindex on;
+            index   index.html index.php;
+            alias /Users/ruahman/swipe-tech-apps/rpm-tornado/apps/root/;
+        }
+
         location /menu {
             autoindex on;
             index   index.html index.php;
             alias /Users/ruahman/swipe-tech-apps/rpm-tornado/apps/menu/;
         }
 
+        location /comic {
+            autoindex on;
+            index   index.html index.php;
+            alias /Users/ruahman/swipe-tech-apps/rpm-tornado/apps/comic/;
+        }
+
         location /admin {
             autoindex on;
             index   index.html index.php;
+            alias /Users/ruahman/swipe-tech-apps/rpm-tornado/apps/admin/;
+        }
+
+        location /menu-admin {
+            autoindex on;
+            index   index.html index.php;
             alias /Users/ruahman/swipe-tech-apps/rpm-tornado/apps/menu-admin/;
+        }
+
+        location /comic-admin {
+            autoindex on;
+            index   index.html index.php;
+            alias /Users/ruahman/swipe-tech-apps/rpm-tornado/apps/comic-admin/;
         }
 
     }
