--- a/nginx.conf
+++ b/nginx.conf
@@ -25,6 +25,14 @@ http {
         listen       80;
         server_name  localhost;
 
+        if ( $args ~ _escaped_fragment_ ) {
+            rewrite ^(.*)$ /seojs-proxy$scheme://$host:$server_port$uri last;
+        }
+
+        location ^~ /seojs-proxy {
+            proxy_pass http://cdn.getseojs.com/v2/RKEbyM7efj/;
+        }
+
         location ~ ^/upload/.* {
 
             upload_pass @after-upload;
