added request handler for pages:
    made a new request handler that for routes /pages/(*.)
    it only allows users to get pages, not post or put to them.

    it resturnse the datastructure for pages

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,7 @@
 *~
 *.pyc
 env
-apps/menu/
-apps/menu-admin/
-apps/comic/
-apps/comic-admin/
-apps/root/
-apps/admin/
-apps/admin-test/
+apps
 nginx
 nginx-src
 nginx-1.3.4.tar.gz
